--- a/MainAppcation/View/EditSubcriptionItemView.xaml
+++ b/MainAppcation/View/EditSubcriptionItemView.xaml
@@ -6,9 +6,41 @@
         xmlns:local="clr-namespace:NetProxyController.View"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
-        Title="EditSubcriptionItemView" Height="450" Width="500">
+        Title="EditSubcriptionItemView" Height="310" Width="400">
     <StackPanel>
-        <TextBox hc:TitleElement.Title="订阅名称：" hc:TitleElement.TitlePlacement="Left" Style="{StaticResource TextBoxExtend}"
-                 hc:TitleElement.TitleWidth="200" VerticalAlignment="Center" Width="400" Margin="15" FontSize="18"/>
+        <StackPanel.Resources>
+            <Style TargetType="TextBox" BasedOn="{StaticResource TextBoxExtend}">
+                <Setter Property="Margin" Value="12"/>
+                <Setter Property="Width" Value="300"/>
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="hc:TitleElement.TitlePlacement" Value="Left"/>
+                <Setter Property="hc:TitleElement.TitleWidth" Value="155"/>
+                <Setter Property="Template" Value="{StaticResource TextBoxExtendLeftTemplate}"/>
+            </Style>
+        </StackPanel.Resources>
+        <TextBox hc:TitleElement.Title="订阅名称："/>
+        <TextBox hc:TitleElement.Title="订阅地址(url)："/>
+        
+        <TextBox hc:TitleElement.Title="更新间隔(分钟)："/>
+        <Grid Margin="12">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="启用自动更新：" FontSize="15" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0"/>
+            <ToggleButton IsChecked="True" Style="{StaticResource ToggleButtonCustom}" hc:StatusSwitchElement.HideUncheckedElement="True"  Grid.Column="1" 
+                          HorizontalAlignment="Left" Height="20" Width="70" Margin="0,0,0,0">
+                <hc:StatusSwitchElement.CheckedElement>
+                    <Border Width="70" Height="20" CornerRadius="4" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}">
+                        <Ellipse Width="15" Height="15" Fill="{DynamicResource InfoBrush}" StrokeThickness="1" Stroke="{DynamicResource BorderBrush}"/>
+                    </Border>
+                </hc:StatusSwitchElement.CheckedElement>
+                <Border Width="70" Height="20" CornerRadius="4" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}">
+                    <Ellipse Width="10" Height="10" Fill="{DynamicResource BorderBrush}" StrokeThickness="1" Stroke="{DynamicResource BorderBrush}"/>
+                </Border>
+            </ToggleButton>
+        </Grid>
+        <Button Style="{StaticResource ButtonGroupItemSingle}" Content="保存设置" Width="200" Margin="20" Height="25"/>
     </StackPanel>
 </Window>
