--- a/MainAppcation/View/SubcriptionManagerView.xaml
+++ b/MainAppcation/View/SubcriptionManagerView.xaml
@@ -13,7 +13,7 @@
     </Window.DataContext>
     <StackPanel>
         <hc:ButtonGroup>
-            <Button Content="添加"/>
+            <Button Content="添加" Command="{Binding EditSubcriptionItemCmd}"/>
             <Button Content="编辑"/>
             <Button Content="删除"/>
             <Button Content="关闭"/>
