--- a/MainAppcation/View/SubcriptionManagerView.xaml
+++ b/MainAppcation/View/SubcriptionManagerView.xaml
@@ -18,7 +18,7 @@
             <Button Content="删除"/>
             <Button Content="关闭"/>
         </hc:ButtonGroup>
-        <ListView Height="380" ItemsSource="{Binding ListViewDataSource.View, Mode=OneWay}">
+        <ListView Height="380" ItemsSource="{Binding ListViewDataSource.View, Mode=OneWay}" SelectionChanged="ListView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="名称" Width="80" DisplayMemberBinding="{Binding SubName, Mode=OneWay}"/>
