--- a/MainAppcation/View/SubcriptionManagerView.xaml
+++ b/MainAppcation/View/SubcriptionManagerView.xaml
@@ -13,12 +13,26 @@
     </Window.DataContext>
     <StackPanel>
         <hc:ButtonGroup>
-            <Button Content="添加" Command="{Binding EditSubcriptionItemCmd}"/>
-            <Button Content="编辑"/>
-            <Button Content="删除"/>
-            <Button Content="关闭"/>
+            <Button x:Name="AddBtn" Content="添加" Command="{Binding CreateSubcriptionItemCmd}"/>
+            <Button x:Name="EditBtn" Content="编辑" Command="{Binding EditSubcriptionItemCmd}" IsEnabled="{Binding ListViewSeletedItemsIsSingle, Mode=OneWay}"/>
+            <Button x:Name="DelBtn" Content="删除" Command="{Binding DeleteSubcriptionItemsCmd}" IsEnabled="{Binding ListViewHasSelectedItems, Mode=OneWay}"/>
+            <Button x:Name="UpdateBtn" Content="更新订阅" Command="{Binding UpdateSubcriptionItemsCmd}" IsEnabled="{Binding ListViewHasSelectedItems, Mode=OneWay}"/>
         </hc:ButtonGroup>
         <ListView Height="380" ItemsSource="{Binding ListViewDataSource.View, Mode=OneWay}" SelectionChanged="ListView_SelectionChanged">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemBaseStyle}">
+                    <Style.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="ListBoxItem.IsSelected" Value="true" />
+                                <Condition Property="Selector.IsSelectionActive" Value="false" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Background" Value="{DynamicResource PrimaryBrush}" />
+                            <Setter Property="Foreground" Value="{DynamicResource TextIconBrush}" />
+                        </MultiTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="名称" Width="80" DisplayMemberBinding="{Binding SubName, Mode=OneWay}"/>
