--- a/MainAppcation/View/EditSubcriptionItemView.xaml
+++ b/MainAppcation/View/EditSubcriptionItemView.xaml
@@ -7,6 +7,8 @@
         xmlns:local="clr-namespace:NetProxyController.View"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen"
         Title="EditSubcriptionItemView" Height="310" Width="400">
     <StackPanel>
         <StackPanel.Resources>
