--- a/XrayGUI/View/ServerSettingWindow.xaml
+++ b/XrayGUI/View/ServerSettingWindow.xaml
@@ -77,6 +77,7 @@
 
                             <hc:TextBox Grid.Column="1"
                                         Text="{Binding Addr}"
+                                        IsEnabled="{Binding IsNotCheckedFreedom}"
                                         Grid.Row="1"/>
 
                             <TextBlock Grid.Row="2"
@@ -84,7 +85,8 @@
 
                             <hc:TextBox Grid.Column="1"
                                         Grid.Row="2"
-                                        Text="{Binding PortStr}"/>
+                                        Text="{Binding PortStr}"
+                                        IsEnabled="{Binding IsNotCheckedFreedom}"/>
 
                             <TextBlock Text="代理协议(Protocol):"
                                        Grid.Row="3"/>
